Atualização de texto em sistemas.html e sobre.html

--- a/sistema.html
+++ b/sistema.html
@@ -32,42 +32,31 @@
 
     <main>
         <h1>Introdução</h1>
-        <p>O MEGG wOrmhOle System é um sistema que inova o bloco estrutural aparente e a construção modular tradicional introduzindo 5 novos conceitos de construção:</p>
+        <p>MEGG é a abreviação de Modular Elements Grouted in Group (Elementos Modulares Grauteados em Grupo).</p>
+        <p>O MEGG wOrmhOle System é um sistema que inova o bloco estrutural aparente e a construção modular tradicional introduzindo 10 novos conceitos de construção:</p>
         <ol>
-            <li>Construção modular em nível dos menores elementos:<br>
-                <strong>1. a.</strong> Blocos modulares para paredes;<br>
-                <strong>1. b.</strong> Blocos modulares para pilares &#40;fora das paredes&#41;;<br>
-                <strong>1. c.</strong> Blocos modulares para vigas;<br>
-                <strong>1. d.</strong> Portas modulares;<br>
-                <strong>1. e.</strong> Janelas modulares;<br>
-                <strong>1. f.</strong> Caixas modulares.
+            <li>Construção modular em nível dos menores elementos, compreendendo blocos modulares para paredes, blocos modulares para pilares (fora das paredes), blocos modulares para vigas, portas modulares, janelas modulares, caixas modulares;
             </li>
-            <p><strong>Obs.: </strong>Todos os elementos são manuseáveis.</p>
-            <li>Sistema de pré-montagem à seco sem nenhum tipo de encaixe, somente por sobreposição e justaposição, permitindo nivelamento, alinhamento e prumo.</li>
-            <li>Sistema de grauteamento através da injeção de material aderente somente nas juntas de aderência: muito prático, rápido e limpo, e a parede continua oca, ou seja, leve e sem desperdício de material de grauteamento.</li>
-            <li>Blocos com acabamento final direto da fábrica, compreendendo impermeabilização, pintura, revestimento, rodapé, caixinha elétrica, etc.</li>
-            <li>Blocos com rasgos para passagem de armaduras, tubulações e conduítes, nas direções horizontais e verticais.</li>
+            <li>Módulos manuseáveis;</li>
+            <li>Design modular M10 (cm) com dimensões modulares reais, ou seja, sem diminuição de 1 cm nas dimensões nominais, e com tolerâncias dimensionais e geométricas menores do que 1 mm;</li>
+            <li>Design projetado com meios para serem aderidos em grupo;</li>
+            <li>Sistema completo, compreendendo todos os tipos de blocos, portas, janelas, caixas e qualquer outro objeto modular necessário para a parede de uma edificação;</li>
+           <li>Processo de pré-montagem à seco e sem nenhum tipo de encaixe, apenas por sobreposição e justaposição, que permite nivelamento, alinhamento e prumo, muito fácil e eficiente;</li>
+           <li>Sistema de aderência através da injeção de material aderente somente nas juntas de aderência: muito prático, rápido e limpo, e a parede continua oca, ou seja, leve e sem desperdício de material de grauteamento.</li>
+           <li>Blocos com acabamento final direto da fábrica, compreendendo impermeabilização incorporada à massa do bloco, blocos na cor natural ou com pintura, revestimento, rodapé, blocos com caixinhas elétricas, etc.</li>
+           <li>Blocos com rasgos para passagem de armaduras, tubulações e conduítes, nas direções horizontais e verticais.</li>
+           <li>Vida útil de 100 anos (ainda necessita de investimento em testes comprobatórios);</li>
         </ol>
-        <p>Resumindo, MEGG é a abreviação de grupo de Elementos Modulares com meios para: ser pré-montado à seco; ser Grauteado em Grupo; ser montado com acabamento final na fábrica; ser preparado para a passagem de ferragens, tubulações e conduítes.</p>
         <h2>Para que serve?</h2>
         <p>Para a construção de paredes, pilares e vigas de alvenaria.</p>
 
 
         <h1>Diferenciais</h1>
-        <p>O MEEG wOrmhOle system tem pelo menos 15 diferenciais conforme descrito abaixo:</p>
+        <p>O MEEG wOrmhOle system tem pelo menos os seguintes diferenciais:</p>
         <ol>
-            <li>Sistema patenteado de produto;</li>
-            <li>Sistema patenteado de processo de montagem;</li>
-            <li>Sistema patenteado de processo de fabricação;</li>
-            <li>Design modular M10 (cm), permitindo a construção em dimensões múltiplas de 10 cm; dimensões modulares reais, ou seja, sem diminuição de 1 cm nas dimensões nominais; tolerâncias dimensionais e geométricas menores do que 1 mm;</li>
-            <li>Design projetado com meios para serem aderidos em grupo;</li>
-            <li>Processo de pré-montagem à seco e sem nenhum tipo de encaixe, apenas por sobreposição e justaposição que permite nivelamento, alinhamento e prumo, muito fácil e eficiente;</li>
-            <li>Sistema completo, compreendendo todos os tipos de blocos, portas, janelas, caixas e qualquer outro objeto modular necessário para a parede de uma edificação;</li>
-            <li>Processo de aderência em grupo através da injeção de material aderente somente nas juntas de aderência, muito limpo e sem escorrimento de material;</li>
-            <li>Introdução do conceito de blocos com acabamento final direto da fábrica, incluindo impermeabilização incorporada à massa do bloco, pintura, revestimentos, rodapé, etc.;</li>
-            <li>Material aderente de 40 MPa;</li>
-            <li>Alta durabilidade: Devido ao bloco estrutural ser de resistência maior ou igual a 14 MPa, devido ao impermeabilizante ser incorporado diretamente à massa do bloco, devido à opção de fornecimento e uso na cor natural, devido ao processo industrializado de aplicação de pintura, revestimentos, etc., introduz o conceito de garantia de 100 anos (ainda necessita de investimento em testes comprobatórios);</li>
-            <li>Todos os módulos são manuseáveis;</li>
+            <li>Sistema patenteado 1&#41; de produto;</li>
+            <li>Sistema patenteado 1&#41; de processo de montagem;</li>
+            <li>Sistema patenteado 1&#41; de processo de fabricação;</li>
             <li>Resolve a necessidade de acesso, espaço e máquinas pesadas para movimentação dos módulos tradicionais;</li>
             <li>Resolve as limitações de design e dimensões para fabricação em série dos módulos tradicionais;</li>
             <li>Resolve a dependência de fabricação e de montagem dos módulos tradicionais. Compre os MEGGs e projete e faça você mesmo, ou o seu arquiteto e o seu pedreiro.</li>
@@ -88,8 +77,8 @@
         <p>A wOrmhOle oferece a solução para os seguintes problemas apresentados abaixo:</p>
         <ol>
             <li>Assentamento tradicional trabalhoso dos blocos com argamassa;</li>
-            <li><a href="#">Execução trabalhosa das caixarias para vigas e pilares, principalmente os pilares não embutidos na parede;</a></li>
-            <li><a href="#">Execução trabalhosa de rasgos nos blocos para passagem das armaduras horizontais e verticais;</a></li>
+            <li>Execução trabalhosa das caixarias para vigas e pilares, principalmente os pilares não embutidos na parede;</li>
+            <li>Execução trabalhosa de rasgos nos blocos para passagem das armaduras horizontais e verticais;</li>
             <li>Processo trabalhoso de preparação dos vãos e chumbamento das portas, janelas e quaisquer outros objetos a serem chumbados na parede;</li>
             <li>Execução trabalhosa do chapisco, reboco, massa corrida, revestimento, rodapé, pintura e impermeabilização das paredes;</li>
             <li>Vida útil pequena do reboco e da pintura das paredes;</li>
@@ -98,6 +87,7 @@
 
 
         <h1>Valor Agregado</h1>
+
         <h2>Para as construtoras:</h2>
         <p>Eliminação da mão de obra e dos materiais, ferramentas e dispositivos para a execução: </p>
         <ol>
@@ -110,9 +100,10 @@
         <ul>
             <li>Redução de processos trabalhosos, administração, espaço de armazenagem, espaço para preparação, prazos de validade dos perecíveis, mão de obra, recursos, entulho, desperdícios, etc.;</li>
             <li>Melhoria dos aspectos de produtividade, de qualidade, humano e ambiental;</li>
-            <li>Aumento da vida útil das paredes &#40;garantia vitalícia&#41;;</li>
+            <li>Aumento da vida útil das paredes;</li>
             <li>Redução de custos e do lead time da construção, e consequentemente, entrega de mais obras, aumento do faturamento e do lucro;</li>
         </ul>
+
         <h2>Para os fabricantes de blocos:</h2>
         <ul>
             <li>Valor agregado 3 vezes maior se comparado com o valor do bloco tradicional;</li>
@@ -122,7 +113,7 @@
         </ul>
 
 
-        <h1>Patentes</h1>
+        <h1>Pedidos de Patente</h1>
         <h2>Para os Blocos:</h2>
         <p>Brasil: Pedido de patente de invenção de Produto, Processo de Montagem e Processo de Fabricação, com registro no INPI sobre número BR-10-2021-011034-1, com opinião preliminar sobre a patenteabilidade positiva;</p>
 
