--- a/sobre.html
+++ b/sobre.html
@@ -30,9 +30,8 @@
     <main>
         <p>A wOrmhOle é uma construtech brasileira que está estruturada para atuar em todas as regiões do país através do sistema de franquia e/ou licenciamento. Inicialmente a empresa é composta por 2 sócios, 1 engenheiro mecânico e 1 engenheiro de computação do 4º ano.</p>
         <p>Soluções simples, rápidas, práticas e patenteável, sem nenhuma concorrência.</p>
-        <p>Industrializando a construção de alvenaria, caracterizada pelo processo trabalhoso, fazendo da montagem obra um lego.</p>
+        <p>Industrializando a construção de alvenaria, fazendo da montagem obra um lego.</p>
         <p>Introduzindo a construção modular em nível dos menores elementos e escalando a construção civil no mundo.</p>
-        <p>Garantia vitalícia.</p>
         <p>Construindo o futuro sem entulhos.</p>
     </main>
 
