--- a/home.html
+++ b/home.html
@@ -13,13 +13,12 @@
             height: 100%;
         }
     </style>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
 </head>
 <body onresize="mudouTamanho()">
     <header>
         <menu>
             <img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
-            <span id="burger" onclick="clickMenu()">Clique aqui para <strong>abrir/fechar</strong> o menu</span>
+            <span id="burger" onclick="clickMenu()" onmouseenter="change()" onmouseleave="changeback()">clique aqui para <strong>abrir/fechar</strong> o menu</span>
         </menu>
         <nav id="itens" class="navprincipal">
             <img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
@@ -44,12 +43,12 @@
         function clickMenu(){
             if(itens.style.display=='block'){
                 itens.style.display='none'
-                burger.style.backgroundColor='white'
+                burger.style.background='white'
                 burger.style.color='darkred'
             }
             else{
                 itens.style.display='block'
-                burger.style.backgroundColor='darkred'
+                burger.style.background='darkred'
                 burger.style.color='white'
             }
         }
@@ -60,6 +59,14 @@
             else{
                 itens.style.display='none'
             }
+        }
+        function change(){
+            burger.style.color='white'
+            burger.style.background='darkred'
+        }
+        function changeback(){
+            burger.style.color='darkred'
+            burger.style.background='white'
         }
     </script>
 </body>
