--- a/sobre.html
+++ b/sobre.html
@@ -12,7 +12,7 @@
     <header>
         <menu>
             <img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
-            <span id="burger" onclick="clickMenu()">Clique aqui para <strong>abrir/fechar</strong> o menu</span>
+            <span id="burger" onclick="clickMenu()" onmouseenter="change()" onmouseleave="changeback()">clique aqui para <strong>abrir/fechar</strong> o menu</span>
         </menu>
         <nav id="itens" class="navprincipal">
             <img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
@@ -55,6 +55,14 @@
             else{
                 itens.style.display='none'
             }
+        }
+        function change(){
+            burger.style.color='white'
+            burger.style.background='darkred'
+        }
+        function changeback(){
+            burger.style.color='darkred'
+            burger.style.background='white'
         }
     </script>
 </body>
