Tentativa de deixar o navegador fixo na tela

--- a/home.html
+++ b/home.html
@@ -32,6 +32,7 @@
             </div>
         </nav>
     </header>
+    <header class="header0"><img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo"></header>
 
         <div class="vid">
             <video autoplay loop muted controls>
