--- a/produto_page6.html
+++ b/produto_page6.html
@@ -34,6 +34,11 @@
             <a href="produto_page6.html" class="atual">Equipamento</a>
         </nav>
     </header>
+    <header class="header0"><img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
+        <nav id="nagsec" class="navproduto">
+            <p>produtos</p>
+        </nav>
+    </header>
     
     <main>
         <h1>Pagina 6</h1>
