--- a/sobre.html
+++ b/sobre.html
@@ -26,6 +26,7 @@
             </div>
         </nav>
     </header>
+    <header class="header0"><img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo"></header>
 
     <main>
         <p>A wOrmhOle é uma construtech brasileira que está estruturada para atuar em todas as regiões do país através do sistema de franquia e/ou licenciamento. Inicialmente a empresa é composta por 2 sócios, 1 engenheiro mecânico e 1 engenheiro de computação do 4º ano.</p>
