--- a/fale.html
+++ b/fale.html
@@ -28,6 +28,7 @@
             </div>
         </nav>
     </header>
+    <header class="header0"><img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo"></header>
     
     <main>
         <p><strong>Email:</strong> contato@sulfibra.com.br</p>
