--- a/parceiros.html
+++ b/parceiros.html
@@ -26,6 +26,7 @@
             </div>
         </nav>
     </header>
+    <header class="header0"><img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo"></header>
     
     <main>
         <ul>
