--- a/produto_page6.html
+++ b/produto_page6.html
@@ -34,7 +34,8 @@
             <a href="produto_page6.html" class="atual">Equipamento</a>
         </nav>
     </header>
-    <header class="header0"><img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
+    <header class="header0">
+        <img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
         <nav id="nagsec" class="navproduto">
             <p>produtos</p>
         </nav>
