Atualizando logo da pagina

--- a/fale.html
+++ b/fale.html
@@ -6,7 +6,7 @@
     <title>
         wOrmhOle/Fale Conosco
     </title>
-    <link rel="shortcut icon" href="imagens/Processamento_1/IMP_Logo B_1.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="imagens/Logo/Logo Transparente_1.png" type="image/x-icon">
     <link rel="stylesheet" href="estilo/style.css" media="screen">
     <link rel="stylesheet" href="estilo/print.css" media="print">
 </head>
