Adicionando novo logo

--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>wOrmhOle</title>
-    <link rel="shortcut icon" href="imagens/Logo/Logo Transparente_1.png" type="image/x-icon">
+    <link rel="shortcut icon" href="imagens/Logo/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="estilo/style.css" media="screen">
     <link rel="stylesheet" href="estilo/print.css" media="print">
     <style>
@@ -17,11 +17,11 @@
 <body onresize="mudouTamanho()">
     <header>
         <menu>
-            <img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
+            <img src="imagens/Logo/logo.png" alt="Logo">
             <span id="burger" onclick="clickMenu()" onmouseenter="change()" onmouseleave="changeback()">clique aqui para <strong>abrir/fechar</strong> o menu</span>
         </menu>
         <nav id="itens" class="navprincipal">
-            <img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
+            <img src="imagens/Logo/logo.png" alt="Logo">
             <div>
                 <a href="home.html" class="atual">Home</a>
                 <a href="sistema.html">MEGG wOrmhOle System</a>
@@ -32,7 +32,7 @@
             </div>
         </nav>
     </header>
-    <header class="header0"><img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo"></header>
+    <header class="header0"><img src="imagens/Logo/logo.png" alt="Logo"></header>
 
         <div class="vid">
             <video autoplay loop muted controls>
