--- a/fale.html
+++ b/fale.html
@@ -6,18 +6,18 @@
     <title>
         wOrmhOle/Fale Conosco
     </title>
-    <link rel="shortcut icon" href="imagens/Logo/Logo Transparente_1.png" type="image/x-icon">
+    <link rel="shortcut icon" href="imagens/Logo/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="estilo/style.css" media="screen">
     <link rel="stylesheet" href="estilo/print.css" media="print">
 </head>
 <body onresize="mudouTamanho()">
     <header>
         <menu>
-            <img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
+            <img src="imagens/Logo/logo.png" alt="Logo">
             <span id="burger" onclick="clickMenu()" onmouseenter="change()" onmouseleave="changeback()">clique aqui para <strong>abrir/fechar</strong> o menu</span>
         </menu>
         <nav id="itens" class="navprincipal">
-            <img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
+            <img src="imagens/Logo/logo.png" alt="Logo">
             <div>
                 <a href="home.html">Home</a>
                 <a href="sistema.html">MEGG wOrmhOle System</a>
@@ -28,7 +28,7 @@
             </div>
         </nav>
     </header>
-    <header class="header0"><img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo"></header>
+    <header class="header0"><img src="imagens/Logo/logo.png" alt="Logo"></header>
     
     <main>
         <p><strong>Email:</strong> contato@sulfibra.com.br</p>
