--- a/produto_page4.html
+++ b/produto_page4.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>wOrmhOle/Produtos/Material Aderente</title>
-    <link rel="shortcut icon" href="imagens/Logo/Logo Transparente_1.png" type="image/x-icon">
+    <link rel="shortcut icon" href="imagens/Logo/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="estilo/style.css" media="screen">
     <link rel="stylesheet" href="estilo/print.css" media="print">
 </head>
 <body onresize="mudouTamanho()">
     <header>
         <menu onclick="substituirElementos()">
-            <img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
+            <img src="imagens/Logo/logo.png" alt="Logo">
             <span id="burger" onclick="clickMenu()" onmouseenter="change()" onmouseleave="changeback()">clique aqui para <strong>abrir/fechar</strong> o menu</span>
         </menu>
         <nav id="itens" class="navprincipal">
-            <img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
+            <img src="imagens/Logo/logo.png" alt="Logo">
             <div>
                 <a href="home.html">Home</a>
                 <a href="sistema.html">MEGG wOrmhOle System</a>
@@ -34,7 +34,7 @@
             <a href="produto_page6.html">Equipamento</a>
         </nav>
     </header>
-    <header class="header0"><img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
+    <header class="header0"><img src="imagens/Logo/logo.png" alt="Logo">
         <nav id="nagsec" class="navproduto">
             <p>produtos</p>
         </nav>
