--- a/sobre.html
+++ b/sobre.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>wOrmhOle/Sobre Nós</title>
-    <link rel="shortcut icon" href="imagens/Logo/Logo Transparente_1.png" type="image/x-icon">
+    <link rel="shortcut icon" href="imagens/Logo/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="estilo/style.css" media="screen">
     <link rel="stylesheet" href="estilo/print.css" media="print">
 </head>
 <body onresize="mudouTamanho()">
     <header>
         <menu>
-            <img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
+            <img src="imagens/Logo/logo.png" alt="Logo">
             <span id="burger" onclick="clickMenu()" onmouseenter="change()" onmouseleave="changeback()">clique aqui para <strong>abrir/fechar</strong> o menu</span>
         </menu>
         <nav id="itens" class="navprincipal">
-            <img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
+            <img src="imagens/Logo/logo.png" alt="Logo">
             <div>
                 <a href="home.html">Home</a>
                 <a href="sistema.html">MEGG wOrmhOle System</a>
@@ -26,7 +26,7 @@
             </div>
         </nav>
     </header>
-    <header class="header0"><img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo"></header>
+    <header class="header0"><img src="imagens/Logo/logo.png" alt="Logo"></header>
 
     <main>
         <p>A wOrmhOle é uma construtech brasileira que está estruturada para atuar em todas as regiões do país através do sistema de franquia e/ou licenciamento. Inicialmente a empresa é composta por 2 sócios, 1 engenheiro mecânico e 1 engenheiro de computação do 4º ano.</p>
