--- a/paginas/produto_page4.html
+++ b/paginas/produto_page4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>wOrmhOle/Produtos/Equipamento</title>
+    <title>wOrmhOle/Produtos/Material Aderente</title>
     <link rel="shortcut icon" href="imagens/Logo/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="estilo/style.css" media="screen">
     <link rel="stylesheet" href="estilo/print.css" media="print">
@@ -17,7 +17,7 @@
         <nav id="itens" class="navprincipal">
             <img src="imagens/Logo/logo.png" alt="Logo">
             <div>
-                <a href="home.html">Home</a>
+                <a href="../home.html">Home</a>
                 <a href="sistema.html">MEGG wOrmhOle System</a>
                 <p href="produto_page1.html" id="prod" class="atual">Produtos</p>
                 <a href="sobre.html">Sobre Nós</a>
@@ -29,20 +29,43 @@
             <a href="produto_page1.html">Blocos</a>
             <a href="produto_page2.html">Esquadrilhas</a>
             <a href="produto_page3.html">Caixas</a>
-            <a href="produto_page4.html">Material Aderente</a>
+            <a href="produto_page4.html" class="atual">Material Aderente</a>
             <a href="produto_page5.html">Dispositivos</a>
-            <a href="produto_page6.html" class="atual">Equipamento</a>
+            <a href="produto_page6.html">Equipamento</a>
         </nav>
     </header>
-    <header class="header0">
-        <img src="imagens/Logo/logo.png" alt="Logo">
+    <header class="header0"><img src="imagens/Logo/logo.png" alt="Logo">
         <nav id="nagsec" class="navproduto">
             <p>produtos</p>
         </nav>
     </header>
     
     <main>
-        <h1>Pagina 6</h1>
+        <h1>Características Principais</h1>
+        <p>Esta versão incial de Material Aderente wOrmhOle compreende:</p>
+        <ul>
+            <li>Material pronto para uso, com adição de água no momento da aplicação;</li>
+            <li>Fluidez especialmente projetada para a aplicação nos MEEGs wOrmhOle;</li>
+            <li>Sem adição de pedriscos;</li>
+            <li>Saco de 25 kg;</li>
+            <li>Cor conforme a cor dos Blocos;</li>
+            <li>1 kg de material seco corresponde a 0,6 litros de graute pronto para aplicação;</li>
+            <li>Ficha técnica <a href="#">[link]</a>;</li>
+            <li>Ficha de informação de segurança do produto químico [link].</li>
+        </ul>
+        <p>Nota: A garantia de funcionamento do MEGG wOrmhOle System está relacionada à utilização dos Materias Aderents wOrmhOle especificados no item 2**.</p>
+
+
+        <h1>Materiais</h1>
+        <h3>1: Graute</h3>
+        <ul>
+            <li>Resistência à compressão ≥ 40 MPa em 28 dias;</li>
+            <li>Cor Cinza;</li>
+        </ul>
+
+
+        <h1>Códigos de Identificação</h1>
+        <p>MEEG-M1-Cz</p>
     </main>
 
     <script>
@@ -80,6 +103,7 @@
                 nagsec.style.display = 'none';
             }
         }
+        
         function change(){
             burger.style.color='white'
             burger.style.background='darkred'
