--- a/paginas/produto_page6.html
+++ b/paginas/produto_page6.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>wOrmhOle/Produtos/Dispositivos</title>
+    <title>wOrmhOle/Produtos/Equipamento</title>
     <link rel="shortcut icon" href="imagens/Logo/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="estilo/style.css" media="screen">
     <link rel="stylesheet" href="estilo/print.css" media="print">
@@ -17,7 +17,7 @@
         <nav id="itens" class="navprincipal">
             <img src="imagens/Logo/logo.png" alt="Logo">
             <div>
-                <a href="home.html">Home</a>
+                <a href="../home.html">Home</a>
                 <a href="sistema.html">MEGG wOrmhOle System</a>
                 <p href="produto_page1.html" id="prod" class="atual">Produtos</p>
                 <a href="sobre.html">Sobre Nós</a>
@@ -30,18 +30,19 @@
             <a href="produto_page2.html">Esquadrilhas</a>
             <a href="produto_page3.html">Caixas</a>
             <a href="produto_page4.html">Material Aderente</a>
-            <a href="produto_page5.html" class="atual">Dispositivos</a>
-            <a href="produto_page6.html">Equipamento</a>
+            <a href="produto_page5.html">Dispositivos</a>
+            <a href="produto_page6.html" class="atual">Equipamento</a>
         </nav>
     </header>
-    <header class="header0"><img src="imagens/Logo/logo.png" alt="Logo">
+    <header class="header0">
+        <img src="imagens/Logo/logo.png" alt="Logo">
         <nav id="nagsec" class="navproduto">
             <p>produtos</p>
         </nav>
     </header>
     
     <main>
-        <h1>Pagina 5</h1>
+        <h1>Pagina 6</h1>
     </main>
 
     <script>
