--- a/home.html
+++ b/home.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>wOrmhOle</title>
-    <link rel="shortcut icon" href="imagens/Logo/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="estilo/style.css" media="screen">
-    <link rel="stylesheet" href="estilo/print.css" media="print">
+    <link rel="shortcut icon" href="paginas/imagens/Logo/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="paginas/estilo/style.css" media="screen">
+    <link rel="stylesheet" href="paginas/estilo/print.css" media="print">
     <style>
         body,html{
             background-image: linear-gradient(to top, gray, transparent);
@@ -17,26 +17,26 @@
 <body onresize="mudouTamanho()">
     <header>
         <menu>
-            <img src="imagens/Logo/logo.png" alt="Logo">
+            <img src="paginas/imagens/Logo/logo.png" alt="Logo">
             <span id="burger" onclick="clickMenu()" onmouseenter="change()" onmouseleave="changeback()">clique aqui para <strong>abrir/fechar</strong> o menu</span>
         </menu>
         <nav id="itens" class="navprincipal">
-            <img src="imagens/Logo/logo.png" alt="Logo">
+            <img src="paginas/imagens/Logo/logo.png" alt="Logo">
             <div>
                 <a href="home.html" class="atual">Home</a>
-                <a href="sistema.html">MEGG wOrmhOle System</a>
-                <a href="produto_page1.html">Produtos</a>
-                <a href="sobre.html">Sobre Nós</a>
-                <a href="parceiros.html">Parceiros & Investidores</a>
-                <a href="fale.html">Fale Conosco</a>
+                <a href="paginas/sistema.html">MEGG wOrmhOle System</a>
+                <a href="paginas/produto_page1.html">Produtos</a>
+                <a href="paginas/sobre.html">Sobre Nós</a>
+                <a href="paginas/parceiros.html">Parceiros & Investidores</a>
+                <a href="paginas/fale.html">Fale Conosco</a>
             </div>
         </nav>
     </header>
-    <header class="header0"><img src="imagens/Logo/logo.png" alt="Logo"></header>
+    <header class="header0"><img src="paginas/imagens/Logo/logo.png" alt="Logo"></header>
 
         <div class="vid">
             <video autoplay loop muted controls>
-                <source src="video/00_Ads_Site_2025_001.mp4" type="video/mp4">
+                <source src="paginas/video/00_Ads_Site_2025_001.mp4" type="video/mp4">
             </video>
         </div>
 
