--- a/paginas/produto_page5.html
+++ b/paginas/produto_page5.html
@@ -3,48 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-        wOrmhOle/Fale Conosco
-    </title>
+    <title>wOrmhOle/Produtos/Dispositivos</title>
     <link rel="shortcut icon" href="imagens/Logo/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="estilo/style.css" media="screen">
     <link rel="stylesheet" href="estilo/print.css" media="print">
 </head>
 <body onresize="mudouTamanho()">
     <header>
-        <menu>
+        <menu onclick="substituirElementos()">
             <img src="imagens/Logo/logo.png" alt="Logo">
             <span id="burger" onclick="clickMenu()" onmouseenter="change()" onmouseleave="changeback()">clique aqui para <strong>abrir/fechar</strong> o menu</span>
         </menu>
         <nav id="itens" class="navprincipal">
             <img src="imagens/Logo/logo.png" alt="Logo">
             <div>
-                <a href="home.html">Home</a>
+                <a href="../home.html">Home</a>
                 <a href="sistema.html">MEGG wOrmhOle System</a>
-                <a href="produto_page1.html">Produtos</a>
+                <p href="produto_page1.html" id="prod" class="atual">Produtos</p>
                 <a href="sobre.html">Sobre Nós</a>
                 <a href="parceiros.html">Parceiros & Investidores</a>
-                <a href="fale.html" class="atual">Fale Conosco</a>
+                <a href="fale.html">Fale Conosco</a>
             </div>
         </nav>
+        <nav id="nagsec" class="navproduto">
+            <a href="produto_page1.html">Blocos</a>
+            <a href="produto_page2.html">Esquadrilhas</a>
+            <a href="produto_page3.html">Caixas</a>
+            <a href="produto_page4.html">Material Aderente</a>
+            <a href="produto_page5.html" class="atual">Dispositivos</a>
+            <a href="produto_page6.html">Equipamento</a>
+        </nav>
     </header>
-    <header class="header0"><img src="imagens/Logo/logo.png" alt="Logo"></header>
+    <header class="header0"><img src="imagens/Logo/logo.png" alt="Logo">
+        <nav id="nagsec" class="navproduto">
+            <p>produtos</p>
+        </nav>
+    </header>
     
     <main>
-        <p><strong>Email:</strong> contato@sulfibra.com.br</p>
-        <p><strong>Whatsapp:</strong> <s>+55 12 98108 4911</s></p>
+        <h1>Pagina 5</h1>
     </main>
-
 
     <script>
         function clickMenu(){
             if(itens.style.display=='block'){
                 itens.style.display='none'
+                nagsec.style.display='none'
                 burger.style.backgroundColor='white'
                 burger.style.color='darkred'
             }
             else{
                 itens.style.display='block'
+                nagsec.style.display='block'
                 burger.style.backgroundColor='darkred'
                 burger.style.color='white'
             }
@@ -52,9 +62,21 @@
         function mudouTamanho(){
             if(window.innerWidth>=769){
                 itens.style.display='flex'
+                nagsec.style.display='flex'
             }
             else{
                 itens.style.display='none'
+                nagsec.style.display='none'
+            }
+        }
+
+        function substituirElementos() {
+            if(window.innerWidth<=768){
+                const prod = document.getElementById("prod");
+                const nagsec = document.getElementById("nagsec");
+                prod.innerHTML = nagsec.innerHTML;
+                prod.className = nagsec.className;
+                nagsec.style.display = 'none';
             }
         }
         function change(){
