--- a/paginas/produto_page4.html
+++ b/paginas/produto_page4.html
@@ -31,7 +31,7 @@
             <a href="produto_page3.html">Caixas</a>
             <a href="produto_page4.html" class="atual">Material Aderente</a>
             <a href="produto_page5.html">Dispositivos</a>
-            <a href="produto_page6.html">Equipamento</a>
+            <a href="produto_page6.html">Equipamentos</a>
         </nav>
     </header>
     <header class="header0"><img src="imagens/Logo/logo.png" alt="Logo">
