--- a/paginas/produto_page6.html
+++ b/paginas/produto_page6.html
@@ -31,7 +31,7 @@
             <a href="produto_page3.html">Caixas</a>
             <a href="produto_page4.html">Material Aderente</a>
             <a href="produto_page5.html">Dispositivos</a>
-            <a href="produto_page6.html" class="atual">Equipamento</a>
+            <a href="produto_page6.html" class="atual">Equipamentos</a>
         </nav>
     </header>
     <header class="header0">
