--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
 </head>
 <body onresize="mudouTamanho()">
     <header>
-        <menu>
+        <menu onclick="substituirElementos()">
             <img src="paginas/imagens/Logo/logo.png" alt="Logo">
             <span id="burger" onclick="clickMenu()" onmouseenter="change()" onmouseleave="changeback()">clique aqui para <strong>abrir/fechar</strong> o menu</span>
         </menu>
@@ -40,7 +40,11 @@
             <a href="#">Valor Agregado</a>
         </nav>
     </header>
-    <header class="header0"><img src="paginas/imagens/Logo/logo.png" alt="Logo"></header>
+    <header class="header0">
+        <img src="imagens/Logo/logo.png" alt="Logo">
+        <nav id="nagsec" class="navproduto">
+        </nav>
+    </header>
 
         <div class="vid">
             <video autoplay loop muted controls>
@@ -52,21 +56,25 @@
         function clickMenu(){
             if(itens.style.display=='block'){
                 itens.style.display='none'
-                burger.style.background='white'
+                nagsec.style.display='none'
+                burger.style.backgroundColor='white'
                 burger.style.color='darkred'
             }
             else{
                 itens.style.display='block'
-                burger.style.background='darkred'
+                nagsec.style.display='block'
+                burger.style.backgroundColor='darkred'
                 burger.style.color='white'
             }
         }
         function mudouTamanho(){
             if(window.innerWidth>=769){
                 itens.style.display='flex'
+                nagsec.style.display='flex'
             }
             else{
                 itens.style.display='none'
+                nagsec.style.display='none'
             }
         }
 
@@ -79,7 +87,6 @@
                 nagsec.style.display = 'none';
             }
         }
-        
         function change(){
             burger.style.color='white'
             burger.style.background='darkred'
