Alteração nos navegadores atuais

--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
             <img src="paginas/imagens/Logo/logo.png" alt="Logo">
             <div>
                 <a href="home.html" id="prod" class="atual">Home</a>
-                <a href="paginas/sistema.html">MEGG wOrmhOle System</a>
+                <a href="paginas/sistema.html">Soluções de Montagem</a>
                 <a href="paginas/produto_page1.html">Produtos</a>
                 <a href="paginas/sobre.html">Sobre Nós</a>
                 <a href="paginas/parceiros.html">Parceiros & Investidores</a>
