--- a/paginas/parceiros.html
+++ b/paginas/parceiros.html
@@ -18,7 +18,7 @@
             <img src="imagens/Logo/logo.png" alt="Logo">
             <div>
                 <a href="../home.html">Home</a>
-                <a href="sistema.html">MEGG wOrmhOle System</a>
+                <a href="sistema.html">Soluções de Montagem</a>
                 <a href="produto_page1.html">Produtos</a>
                 <a href="sobre.html">Sobre Nós</a>
                 <a href="parceiros.html" id="prod" class="atual">Parceiros & Investidores</a>
@@ -51,7 +51,6 @@
             <li>Contrato de Franquia</li>
             <li>Contrato de Investidor</li>
             <li>Contrato de Licenciamento</li>
-
         </ul>
     </main>
 
@@ -59,11 +58,13 @@
         function clickMenu(){
             if(itens.style.display=='block'){
                 itens.style.display='none'
+                nagsec.style.display='none'
                 burger.style.backgroundColor='white'
                 burger.style.color='darkred'
             }
             else{
                 itens.style.display='block'
+                nagsec.style.display='block'
                 burger.style.backgroundColor='darkred'
                 burger.style.color='white'
             }
@@ -71,9 +72,11 @@
         function mudouTamanho(){
             if(window.innerWidth>=769){
                 itens.style.display='flex'
+                nagsec.style.display='flex'
             }
             else{
                 itens.style.display='none'
+                nagsec.style.display='none'
             }
         }
 
