--- a/paginas/produto_page1.html
+++ b/paginas/produto_page1.html
@@ -18,7 +18,7 @@
             <img src="imagens/Logo/logo.png" alt="Logo">
             <div>
                 <a href="../home.html">Home</a>
-                <a href="sistema.html">Soluções de Montagem</a>
+                <a href="solucoes.html">Soluções de Montagem</a>
                 <p href="produto_page1.html" id="prod" class="atual">Produtos</p>
                 <a href="sobre.html">Sobre Nós</a>
                 <a href="parceiros.html">Parceiros & Investidores</a>
