--- a/paginas/sistema.html
+++ b/paginas/sistema.html
@@ -19,7 +19,7 @@
             <img src="imagens/Logo/logo.png" alt="Logo">
             <div>
                 <a href="../home.html">Home</a>
-                <a href="sistema.html" class="atual">Soluções de Montagem</a>
+                <a href="solucoes.html" class="atual">Soluções de Montagem</a>
                 <a href="produto_page1.html">Produtos</a>
                 <a href="sobre.html">Sobre Nós</a>
                 <a href="parceiros.html">Parceiros & Investidores</a>
