--- a/paginas/solucoes.html
+++ b/paginas/solucoes.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>wOrmhOle/Sobre Nós</title>
+    <title>
+        wOrmhOle/Fale Conosco
+    </title>
     <link rel="shortcut icon" href="imagens/Logo/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="estilo/style.css" media="screen">
     <link rel="stylesheet" href="estilo/print.css" media="print">
@@ -18,23 +20,20 @@
             <img src="imagens/Logo/logo.png" alt="Logo">
             <div>
                 <a href="../home.html">Home</a>
-                <a href="solucoes.html">Soluções de Montagem</a>
+                <a href="solucoes.html" class="atual">Soluções de Montagem</a>
                 <a href="produto_page1.html">Produtos</a>
-                <a href="sobre.html" class="atual">Sobre Nós</a>
+                <a href="sobre.html">Sobre Nós</a>
                 <a href="parceiros.html">Parceiros & Investidores</a>
                 <a href="fale.html">Fale Conosco</a>
             </div>
         </nav>
     </header>
     <header class="header0"><img src="imagens/Logo/logo.png" alt="Logo"></header>
-
+    
     <main>
-        <p>A wOrmhOle é uma construtech brasileira que está estruturada para atuar em todas as regiões do país através do sistema de franquia e/ou licenciamento. Inicialmente a empresa é composta por 2 sócios, 1 engenheiro mecânico e 1 engenheiro de computação do 4º ano.</p>
-        <p>Soluções simples, rápidas, práticas e patenteável, sem nenhuma concorrência.</p>
-        <p>Industrializando a construção de alvenaria, fazendo da montagem obra um lego.</p>
-        <p>Introduzindo a construção modular em nível dos menores elementos e escalando a construção civil no mundo.</p>
-        <p>Construindo o futuro sem entulhos.</p>
+        <h1>Soluçoes</h1>
     </main>
+
 
     <script>
         function clickMenu(){
