--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
         <nav id="itens" class="navprincipal">
             <img src="paginas/imagens/Logo/logo.png" alt="Logo">
             <div>
-                <a href="home.html" id="prod" class="atual">Home</a>
+                <a href="#" id="prod" class="atual">Home</a>
                 <a href="paginas/solucoes.html">Soluções de Montagem</a>
                 <a href="paginas/produto_page1.html">Produtos</a>
                 <a href="paginas/sobre.html">Sobre Nós</a>
@@ -32,7 +32,7 @@
             </div>
         </nav>
         <nav id="nagsec" class="navproduto">
-            <a href="home.html" class="atual">Video</a>
+            <a href="#" class="atual">Video</a>
             <a href="paginas/sistema.html">MEGG wOrmhOle System</a>
             <a href="#">Diferenciais</a>
             <a href="#">Processo de Montagem</a>
