--- a/paginas/parceiros.html
+++ b/paginas/parceiros.html
@@ -21,12 +21,12 @@
                 <a href="solucoes.html">Soluções de Montagem</a>
                 <a href="produto_page1.html">Produtos</a>
                 <a href="sobre.html">Sobre Nós</a>
-                <a href="parceiros.html" id="prod" class="atual">Parceiros & Investidores</a>
+                <a href="#" id="prod" class="atual">Parceiros & Investidores</a>
                 <a href="fale.html">Fale Conosco</a>
             </div>
         </nav>
         <nav id="nagsec" class="navproduto">
-            <a href="#">Pedidos de Patente</a>
+            <a href="#" class="atual">Pedidos de Patente</a>
             <a href="#">Pitch Deck</a>
             <a href="#">One Pager</a>
             <a href="#">Video de MVP</a>
