--- a/paginas/produto_page4.html
+++ b/paginas/produto_page4.html
@@ -19,7 +19,7 @@
             <div>
                 <a href="../home.html">Home</a>
                 <a href="solucoes.html">Soluções de Montagem</a>
-                <p href="produto_page1.html" id="prod" class="atual">Produtos</p>
+                <p href="#" id="prod" class="atual">Produtos</p>
                 <a href="sobre.html">Sobre Nós</a>
                 <a href="parceiros.html">Parceiros & Investidores</a>
                 <a href="fale.html">Fale Conosco</a>
@@ -29,7 +29,7 @@
             <a href="produto_page1.html">Blocos</a>
             <a href="produto_page2.html">Esquadrilhas</a>
             <a href="produto_page3.html">Caixas</a>
-            <a href="produto_page4.html" class="atual">Material Aderente</a>
+            <a href="#" class="atual">Material Aderente</a>
             <a href="produto_page5.html">Dispositivos</a>
             <a href="produto_page6.html">Equipamentos</a>
         </nav>
