--- a/paginas/sobre.html
+++ b/paginas/sobre.html
@@ -20,7 +20,7 @@
                 <a href="../home.html">Home</a>
                 <a href="solucoes.html">Soluções de Montagem</a>
                 <a href="produto_page1.html">Produtos</a>
-                <a href="sobre.html" class="atual">Sobre Nós</a>
+                <a href="#" class="atual">Sobre Nós</a>
                 <a href="parceiros.html">Parceiros & Investidores</a>
                 <a href="fale.html">Fale Conosco</a>
             </div>
