--- a/paginas/fale.html
+++ b/paginas/fale.html
@@ -24,7 +24,7 @@
                 <a href="produto_page1.html">Produtos</a>
                 <a href="sobre.html">Sobre Nós</a>
                 <a href="parceiros.html">Parceiros & Investidores</a>
-                <a href="fale.html" class="atual">Fale Conosco</a>
+                <a href="#" class="atual">Fale Conosco</a>
             </div>
         </nav>
     </header>
