--- a/paginas/produto_page1.html
+++ b/paginas/produto_page1.html
@@ -19,14 +19,14 @@
             <div>
                 <a href="../home.html">Home</a>
                 <a href="solucoes.html">Soluções de Montagem</a>
-                <p href="produto_page1.html" id="prod" class="atual">Produtos</p>
+                <p href="#" id="prod" class="atual">Produtos</p>
                 <a href="sobre.html">Sobre Nós</a>
                 <a href="parceiros.html">Parceiros & Investidores</a>
                 <a href="fale.html">Fale Conosco</a>
             </div>
         </nav>
         <nav id="nagsec" class="navproduto">
-            <a href="produto_page1.html" class="atual">Blocos</a>
+            <a href="#" class="atual">Blocos</a>
             <a href="produto_page2.html">Esquadrilhas</a>
             <a href="produto_page3.html">Caixas</a>
             <a href="produto_page4.html">Material Aderente</a>
