--- a/paginas/sistema.html
+++ b/paginas/sistema.html
@@ -11,23 +11,35 @@
 <body onresize="mudouTamanho()">
     
     <header>
-        <menu>
+        <menu onclick="substituirElementos()">
             <img src="imagens/Logo/logo.png" alt="Logo">
             <span id="burger" onclick="clickMenu()" onmouseenter="change()" onmouseleave="changeback()">clique aqui para <strong>abrir/fechar</strong> o menu</span>
         </menu>
         <nav id="itens" class="navprincipal">
             <img src="imagens/Logo/logo.png" alt="Logo">
             <div>
-                <a href="../home.html">Home</a>
-                <a href="solucoes.html" class="atual">Soluções de Montagem</a>
+                <a href="#" id="prod" class="atual">Home</a>
+                <a href="solucoes.html">Soluções de Montagem</a>
                 <a href="produto_page1.html">Produtos</a>
                 <a href="sobre.html">Sobre Nós</a>
                 <a href="parceiros.html">Parceiros & Investidores</a>
                 <a href="fale.html">Fale Conosco</a>
             </div>
         </nav>
+        <nav id="nagsec" class="navproduto">
+            <a href="../home.html">Video</a>
+            <a href="#" class="atual">MEGG wOrmhOle System</a>
+            <a href="#">Diferenciais</a>
+            <a href="#">Processo de Montagem</a>
+            <a href="#">Solução dos Problemas</a>
+            <a href="#">Valor Agregado</a>
+        </nav>
     </header>
-    <header class="header0"><img src="imagens/Logo/logo.png" alt="Logo"></header>
+    <header class="header0">
+        <img src="imagens/Logo/logo.png" alt="Logo">
+        <nav id="nagsec" class="navproduto">
+        </nav>
+    </header>
     
 
     <main>
