Ajustes no navegador

--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>wOrmhOle</title>
+    <title>wOrmhOle/Vídeo</title>
     <link rel="shortcut icon" href="paginas/imagens/Logo/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="paginas/estilo/style.css" media="screen">
     <link rel="stylesheet" href="paginas/estilo/print.css" media="print">
@@ -32,7 +32,7 @@
             </div>
         </nav>
         <nav id="nagsec" class="navproduto">
-            <a href="#" class="atual">Video</a>
+            <a href="#" class="atual">Vídeo</a>
             <a href="paginas/sistema.html">MEGG wOrmhOle System</a>
             <a href="#">Diferenciais</a>
             <a href="#">Processo de Montagem</a>
