--- a/paginas/sistema.html
+++ b/paginas/sistema.html
@@ -27,7 +27,7 @@
             </div>
         </nav>
         <nav id="nagsec" class="navproduto">
-            <a href="../home.html">Video</a>
+            <a href="../home.html">Vídeo</a>
             <a href="#" class="atual">MEGG wOrmhOle System</a>
             <a href="#">Diferenciais</a>
             <a href="#">Processo de Montagem</a>
@@ -43,7 +43,7 @@
     
 
     <main>
-        <h1>Introdução</h1>
+        <h1>MEGG wOrmhOle System</h1>
         <p>MEGG é a abreviação de Modular Elements Grouted in Group (Elementos Modulares Grauteados em Grupo).</p>
         <p>O MEGG wOrmhOle System é um sistema que inova o bloco estrutural aparente e a construção modular tradicional introduzindo 10 novos conceitos de construção:</p>
         <ol>
