--- a/paginas/produto_page2.html
+++ b/paginas/produto_page2.html
@@ -19,7 +19,7 @@
             <div>
                 <a href="../home.html">Home</a>
                 <a href="solucoes.html">Soluções de Montagem</a>
-                <p href="#" id="prod" class="atual">Produtos</p>
+                <a href="#" id="prod" class="atual">Produtos</a>
                 <a href="sobre.html">Sobre Nós</a>
                 <a href="parceiros.html">Parceiros & Investidores</a>
                 <a href="fale.html">Fale Conosco</a>
