--- a/paginas/sistema.html
+++ b/paginas/sistema.html
@@ -44,23 +44,26 @@
 
     <main>
         <h1>MEGG wOrmhOle System</h1>
+        <h3>O lego da construção modular de alvenaria em nível dos menores elementos.</h3>
+        <h3>Antecipando na fábrica o que era feito na obra.</h3>
+        <h3>Construindo um futuro sem entulhos.</h3>
+
         <p>MEGG é a abreviação de Modular Elements Grouted in Group (Elementos Modulares Grauteados em Grupo).</p>
         <p>O MEGG wOrmhOle System é um sistema que inova o bloco estrutural aparente e a construção modular tradicional introduzindo 10 novos conceitos de construção:</p>
         <ol>
             <li>Construção modular em nível dos menores elementos, compreendendo blocos modulares para paredes, blocos modulares para pilares (fora das paredes), blocos modulares para vigas, portas modulares, janelas modulares, caixas modulares;
             </li>
             <li>Módulos manuseáveis;</li>
-            <li>Design modular M10 (cm) com dimensões modulares reais, ou seja, sem diminuição de 1 cm nas dimensões nominais, e com tolerâncias dimensionais e geométricas menores do que 1 mm;</li>
+            <li>Design modular M10 com dimensões modulares reais, ou seja, sem diminuição de 1 cm nas dimensões nominais, e com tolerâncias dimensionais e geométricas menores do que 1 mm;</li>
             <li>Design projetado com meios para serem aderidos em grupo;</li>
-            <li>Sistema completo, compreendendo todos os tipos de blocos, portas, janelas, caixas e qualquer outro objeto modular necessário para a parede de uma edificação;</li>
+            <li>Sistema completo, compreendendo todos os tipos de blocos <a href="#">(vide aba "Soluções de Montagem")</a>, portas, janelas, caixas e qualquer outro objeto modular necessário para a parede de uma edificação;</li>
            <li>Processo de pré-montagem à seco e sem nenhum tipo de encaixe, apenas por sobreposição e justaposição, que permite nivelamento, alinhamento e prumo, muito fácil e eficiente;</li>
            <li>Sistema de aderência através da injeção de material aderente somente nas juntas de aderência: muito prático, rápido e limpo, e a parede continua oca, ou seja, leve e sem desperdício de material de grauteamento.</li>
            <li>Blocos com acabamento final direto da fábrica, compreendendo impermeabilização incorporada à massa do bloco, blocos na cor natural ou com pintura, revestimento, rodapé, blocos com caixinhas elétricas, etc.</li>
            <li>Blocos com rasgos para passagem de armaduras, tubulações e conduítes, nas direções horizontais e verticais.</li>
-           <li>Vida útil de 100 anos (ainda necessita de investimento em testes comprobatórios);</li>
+           <li>Parede e fachada com vida útil de 100 anos (ainda necessita de investimento em testes comprobatórios);</li>
         </ol>
-        <h2>Para que serve?</h2>
-        <p>Para a construção de paredes, pilares e vigas de alvenaria.</p>
+
 
 
         <h1>Diferenciais</h1>
