--- a/home.html
+++ b/home.html
@@ -34,10 +34,10 @@
         <nav id="nagsec" class="navproduto">
             <a href="#" class="atual">Vídeo</a>
             <a href="paginas/sistema.html">MEGG wOrmhOle System</a>
-            <a href="#">Diferenciais</a>
-            <a href="#">Processo de Montagem</a>
-            <a href="#">Solução dos Problemas</a>
-            <a href="#">Valor Agregado</a>
+            <a href="paginas/diferenciais.html">Diferenciais</a>
+            <a href="paginas/processos.html">Processo de Montagem</a>
+            <a href="paginas/solucaoproblemas.html">Solução dos Problemas</a>
+            <a href="paginas/valor.html">Valor Agregado</a>
         </nav>
     </header>
     <header class="header0">
